force-app/main/default/objects/copado__Step__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Provide the comments on the task activity if required.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>