force-app/main/default/objects/copado__Step__c/fields/Deployment_Task__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Task</label>
    <referenceTo>copado__Deployment_Task__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Step_Deployment_task</relationshipName>
    <type>Lookup</type>
</CustomField>