force-app/main/default/objects/copado__Step__c/fields/Permormed_by__c.field-meta.xml
<CustomField>
    <fullName>Permormed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Provide the user who has performed the Manual Task</inlineHelpText>
    <label>Performed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Performed_by</relationshipName>
    <type>Lookup</type>
</CustomField>