force-app/main/default/objects/copado__Step__c/fields/Pull_Request__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pull Request</label>
    <referenceTo>copado__Pull_Request__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Step_Pull_Request</relationshipName>
    <type>Lookup</type>
</CustomField>