force-app/main/default/objects/copado__Step__c/fields/Validation_Request__c.field-meta.xml
<CustomField>
    <fullName>Validation_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please provide the request for the Step Validation</inlineHelpText>
    <label>Validation Request</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Validation_Request</relationshipName>
    <type>Lookup</type>
</CustomField>