force-app/main/default/objects/copado__Step__c/validationRules/Manual_Task_Performed.validationRule-meta.xml
<ValidationRule>
    <fullName>Manual_Task_Performed</fullName>
    <active>false</active>
    <description>Manual Task Performed by</description>
    <errorConditionFormula>AND(ISPICKVAL(copado__Type__c ,&apos;Manual Task&apos;),
	ISPICKVAL( copado__Status__c ,&apos;Completed Successfully&apos;),
	ISBLANK( Permormed_by__c )
	)</errorConditionFormula>
    <errorDisplayField>Permormed_by__c</errorDisplayField>
    <errorMessage>Please Update the Performed by field</errorMessage>
</ValidationRule>