force-app/main/default/objects/copado__Step__c/validationRules/Manual_Task_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Manual_Task_Validation</fullName>
    <active>false</active>
    <description>Manual Task Validation</description>
    <errorConditionFormula>AND(ISPICKVAL(copado__Type__c ,&apos;Manual Task&apos;),
	ISPICKVAL( copado__Status__c ,&apos;Completed Successfully&apos;),
	ISBLANK( Validated_By__c )
	)</errorConditionFormula>
    <errorDisplayField>Validated_By__c</errorDisplayField>
    <errorMessage>Please Update the Validated by field</errorMessage>
</ValidationRule>