force-app/main/default/objects/copado__Step__c/validationRules/Prevent_False_update_Validated_by.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_False_update_Validated_by</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISPICKVAL(copado__Type__c ,&apos;Manual Task&apos;),
				ISCHANGED( Validated_By__c ), NOT(ISBLANK(Validated_By__c)),$User.Id &lt;&gt; Validated_By__c)</errorConditionFormula>
    <errorDisplayField>Validated_By__c</errorDisplayField>
    <errorMessage>You cannot provide other usernames</errorMessage>
</ValidationRule>