force-app/main/default/objects/copado__Step__c/validationRules/Validation_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Request</fullName>
    <active>true</active>
    <description>this validation rule is for validation request check.</description>
    <errorConditionFormula>AND (Permormed_by__c &lt;&gt; NULL,Validation_Request__c = NULL)</errorConditionFormula>
    <errorDisplayField>Validation_Request__c</errorDisplayField>
    <errorMessage>Please provide the validation request also</errorMessage>
</ValidationRule>